[gd_scene load_steps=9 format=3 uid="uid://cy2j3jt8m32i7"]

[ext_resource type="Script" path="res://world.gd" id="1_pb6ur"]
[ext_resource type="Texture2D" uid="uid://drnqjb2krrhwe" path="res://assets/Background_scene.png" id="1_qf13a"]
[ext_resource type="Script" path="res://scripts/Day_Night_canvas.gd" id="2_7s07y"]
[ext_resource type="Texture2D" uid="uid://bkpc1kjm4t2xn" path="res://assets/average.tres" id="3_c7x4u"]
[ext_resource type="FontFile" uid="uid://cojdov8bwdtiu" path="res://assets/pixel_font.OTF" id="7_be237"]
[ext_resource type="Script" path="res://scripts/UI.gd" id="7_xvbtq"]
[ext_resource type="Script" path="res://current_hour.gd" id="8_e17r3"]
[ext_resource type="Script" path="res://time_speed.gd" id="10_jobnp"]

[node name="day and night" type="Node2D"]
script = ExtResource("1_pb6ur")

[node name="Day_Night_canvas" type="CanvasModulate" parent="."]
script = ExtResource("2_7s07y")
gradient_texture = ExtResource("3_c7x4u")
INGAME_SPEED = 1.0
INITIAL_HOUR = 0

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("7_xvbtq")
metadata/_edit_group_ = true

[node name="Clock" type="Label" parent="UI"]
offset_left = 1157.0
offset_top = 8.0
offset_right = 1231.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("7_be237")
theme_override_font_sizes/font_size = 40
text = "00:00"

[node name="Phase" type="Label" parent="UI"]
anchors_preset = -1
anchor_left = -0.0615385
anchor_top = -0.0128571
anchor_right = -0.0615385
anchor_bottom = -0.0128571
offset_left = 1213.0
offset_top = 42.0
offset_right = 1298.0
offset_bottom = 85.0
theme_override_fonts/font = ExtResource("7_be237")
theme_override_font_sizes/font_size = 30
text = "Phase"
metadata/_edit_use_anchors_ = true

[node name="Control" type="CanvasLayer" parent="."]

[node name="current_hour" type="HSlider" parent="Control"]
offset_left = 150.0
offset_top = 31.0
offset_right = 354.0
offset_bottom = 47.0
max_value = 23.0
script = ExtResource("8_e17r3")

[node name="Label" type="Label" parent="Control/current_hour"]
layout_mode = 0
offset_left = -144.0
offset_top = -9.0
offset_right = -4.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("7_be237")
theme_override_font_sizes/font_size = 30
text = "current hour:

"

[node name="Value" type="Label" parent="Control/current_hour"]
layout_mode = 0
offset_left = 208.0
offset_top = -3.0
offset_right = 248.0
offset_bottom = 20.0

[node name="time_speed" type="HSlider" parent="Control"]
offset_left = 129.0
offset_top = 67.0
offset_right = 333.0
offset_bottom = 83.0
min_value = 1.0
value = 1.0
script = ExtResource("10_jobnp")

[node name="Label" type="Label" parent="Control/time_speed"]
layout_mode = 0
offset_left = -121.0
offset_top = -10.0
offset_right = -4.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("7_be237")
theme_override_font_sizes/font_size = 30
text = "day speed:
"

[node name="Value" type="Label" parent="Control/time_speed"]
layout_mode = 0
offset_left = 203.0
offset_top = -6.0
offset_right = 243.0
offset_bottom = 17.0

[node name="BackgroundScene" type="Sprite2D" parent="."]
position = Vector2(671, 401)
scale = Vector2(1.11328, 1.11328)
texture = ExtResource("1_qf13a")
metadata/_edit_lock_ = true

[connection signal="value_changed" from="Control/current_hour" to="." method="_on_current_hour_value_changed"]
[connection signal="value_changed" from="Control/time_speed" to="." method="_on_time_speed_value_changed"]
